--- a/ScrabbleSolver/Base.lproj/Main.storyboard
+++ b/ScrabbleSolver/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,61 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ScrabbleSolver" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lha-pZ-EEC">
+                                <rect key="frame" x="20" y="44" width="374" height="818"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Tuq-PL-lPO">
+                                        <rect key="frame" x="8" y="8" width="358" height="802"/>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N8a-X6-ZiK">
+                                        <rect key="frame" x="88.000000000000014" y="723" width="198.33333333333337" height="54"/>
+                                        <color key="backgroundColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <inset key="contentEdgeInsets" minX="15" minY="10" maxX="15" maxY="10"/>
+                                        <state key="normal" title=" Take Photo" image="camera" catalog="system"/>
+                                        <connections>
+                                            <action selector="photoButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xO2-Jg-KyY"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="Tuq-PL-lPO" secondAttribute="bottom" constant="8" id="D38-29-YkX"/>
+                                    <constraint firstItem="Tuq-PL-lPO" firstAttribute="leading" secondItem="Lha-pZ-EEC" secondAttribute="leading" constant="8" id="Lw5-UI-7vr"/>
+                                    <constraint firstItem="N8a-X6-ZiK" firstAttribute="top" secondItem="Tuq-PL-lPO" secondAttribute="bottom" constant="-87" id="XMO-cb-4Ft"/>
+                                    <constraint firstAttribute="trailing" secondItem="Tuq-PL-lPO" secondAttribute="trailing" constant="8" id="kfh-2e-1i2"/>
+                                    <constraint firstItem="Tuq-PL-lPO" firstAttribute="top" secondItem="Lha-pZ-EEC" secondAttribute="top" constant="8" id="qAk-69-a58"/>
+                                    <constraint firstItem="N8a-X6-ZiK" firstAttribute="top" secondItem="Tuq-PL-lPO" secondAttribute="bottom" constant="-87" id="qlh-K7-6Fz"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Lha-pZ-EEC" secondAttribute="bottom" id="8aD-91-8PG"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Lha-pZ-EEC" secondAttribute="trailing" constant="20" id="9Uh-ef-rVg"/>
+                            <constraint firstItem="Lha-pZ-EEC" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="JAX-Yz-UHr"/>
+                            <constraint firstItem="Lha-pZ-EEC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="blg-1m-moR"/>
+                            <constraint firstItem="N8a-X6-ZiK" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="qsb-RT-flb"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="Tuq-PL-lPO" id="gBI-Zf-kQp"/>
+                        <outlet property="photoButton" destination="N8a-X6-ZiK" id="peG-im-8PM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="140.57971014492756" y="138.61607142857142"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="camera" catalog="system" width="128" height="96"/>
+    </resources>
 </document>
