--- a/ScrabbleSolver/Base.lproj/Main.storyboard
+++ b/ScrabbleSolver/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="4ip-uQ-sq3">
-    <device id="retina6_5" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="JxQ-Js-cSI">
+    <device id="ipad10_5" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -12,17 +12,17 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ScrabbleSolver" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="834" height="1112"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lha-pZ-EEC">
-                                <rect key="frame" x="20" y="44" width="374" height="818"/>
+                                <rect key="frame" x="20" y="0.0" width="794" height="1112"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Tuq-PL-lPO">
-                                        <rect key="frame" x="8" y="8" width="358" height="802"/>
+                                        <rect key="frame" x="8" y="8" width="778" height="1096"/>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N8a-X6-ZiK">
-                                        <rect key="frame" x="88.000000000000014" y="723" width="198.33333333333337" height="54"/>
+                                        <rect key="frame" x="298" y="1017" width="198" height="54"/>
                                         <color key="backgroundColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -71,19 +71,80 @@
                         <viewControllerLayoutGuide type="top" id="R5U-er-AhY"/>
                         <viewControllerLayoutGuide type="bottom" id="Dp6-pN-nZd"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="nvs-Mq-CNa">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                    <view key="view" contentMode="scaleToFill" id="nvs-Mq-CNa" userLabel="Container View">
+                        <rect key="frame" x="0.0" y="0.0" width="834" height="1112"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" ambiguous="YES" id="zrQ-kN-Out">
+                                <rect key="frame" x="20" y="44" width="374" height="818"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="zrQ-kN-Out" firstAttribute="leading" secondItem="s8E-RR-0ns" secondAttribute="leading" constant="20" id="2RM-5y-uOw"/>
+                            <constraint firstItem="s8E-RR-0ns" firstAttribute="trailing" secondItem="zrQ-kN-Out" secondAttribute="trailing" constant="20" id="Jgb-uT-0dt"/>
+                            <constraint firstItem="s8E-RR-0ns" firstAttribute="bottom" secondItem="zrQ-kN-Out" secondAttribute="bottom" id="bkV-wz-hHP"/>
+                            <constraint firstItem="zrQ-kN-Out" firstAttribute="top" secondItem="s8E-RR-0ns" secondAttribute="top" id="nWu-cM-qKa"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="s8E-RR-0ns"/>
                     </view>
                     <connections>
-                        <outlet property="previewView" destination="nvs-Mq-CNa" id="DCC-kQ-Duz"/>
+                        <outlet property="previewView" destination="zrQ-kN-Out" id="3Zk-pP-Ler"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Eef-wi-UFF" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="138" y="133"/>
+            <point key="canvasLocation" x="137.68115942028987" y="132.58928571428572"/>
+        </scene>
+        <!--Image CaptureVC-->
+        <scene sceneID="6G1-iJ-kqH">
+            <objects>
+                <viewController id="JxQ-Js-cSI" customClass="ImageCaptureVC" customModule="ScrabbleSolver" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Uha-w6-u1K">
+                        <rect key="frame" x="0.0" y="0.0" width="834" height="1112"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CYT-Ll-Vmc" userLabel="Preview View">
+                                <rect key="frame" x="20" y="0.0" width="393" height="524"/>
+                                <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="CYT-Ll-Vmc" secondAttribute="height" multiplier="3:4" id="UUP-k1-BQZ"/>
+                                </constraints>
+                            </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Pr6-IS-eeE">
+                                <rect key="frame" x="421" y="0.0" width="393" height="524"/>
+                                <color key="backgroundColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WH9-P2-Byo">
+                                <rect key="frame" x="20" y="981" width="794" height="111"/>
+                                <color key="backgroundColor" red="0.91372549020000005" green="0.1333333333" blue="0.40784313729999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="Pr6-IS-eeE" firstAttribute="top" secondItem="846-nc-3iO" secondAttribute="top" id="2Wa-dL-4Ml"/>
+                            <constraint firstItem="WH9-P2-Byo" firstAttribute="top" relation="greaterThanOrEqual" secondItem="CYT-Ll-Vmc" secondAttribute="bottom" constant="8" id="5jw-Lh-bLJ"/>
+                            <constraint firstItem="Pr6-IS-eeE" firstAttribute="width" secondItem="CYT-Ll-Vmc" secondAttribute="width" id="6DP-qr-bVU"/>
+                            <constraint firstItem="WH9-P2-Byo" firstAttribute="height" secondItem="Uha-w6-u1K" secondAttribute="height" multiplier="0.1" id="PTD-dF-jj1"/>
+                            <constraint firstItem="Pr6-IS-eeE" firstAttribute="leading" secondItem="CYT-Ll-Vmc" secondAttribute="trailing" priority="750" constant="8" id="Xj3-I9-ebn"/>
+                            <constraint firstItem="WH9-P2-Byo" firstAttribute="leading" secondItem="846-nc-3iO" secondAttribute="leading" constant="20" id="Ynq-Ho-RS4"/>
+                            <constraint firstItem="WH9-P2-Byo" firstAttribute="top" secondItem="Pr6-IS-eeE" secondAttribute="bottom" priority="750" constant="8" id="dAC-7d-Cuk"/>
+                            <constraint firstItem="846-nc-3iO" firstAttribute="bottom" secondItem="WH9-P2-Byo" secondAttribute="bottom" constant="20" id="eSS-GF-B4x"/>
+                            <constraint firstItem="846-nc-3iO" firstAttribute="trailing" secondItem="WH9-P2-Byo" secondAttribute="trailing" constant="20" id="h2e-s1-yuy"/>
+                            <constraint firstItem="CYT-Ll-Vmc" firstAttribute="leading" secondItem="846-nc-3iO" secondAttribute="leading" constant="20" id="hom-LJ-jKn"/>
+                            <constraint firstItem="CYT-Ll-Vmc" firstAttribute="top" secondItem="846-nc-3iO" secondAttribute="top" id="jaH-Df-fm8"/>
+                            <constraint firstItem="Pr6-IS-eeE" firstAttribute="height" secondItem="CYT-Ll-Vmc" secondAttribute="height" id="lbu-4A-HY2"/>
+                            <constraint firstItem="846-nc-3iO" firstAttribute="trailing" secondItem="Pr6-IS-eeE" secondAttribute="trailing" constant="20" id="wdh-5a-B3f"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="846-nc-3iO"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Xid-eJ-z7m" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1192.0863309352519" y="146.22302158273382"/>
         </scene>
     </scenes>
     <resources>
